--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
-    "sass": "^1.55.0",
-    "web-vitals": "^2.1.4"
+    "sass": "^1.55.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "GENERATE_SOURCEMAP=false react-scripts build",
+    "build": "react-scripts build",
     "eject": "react-scripts eject",
     "netlify": "netlify"
   },
