--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "family-alpha",
-  "version": "0.1.0",
+  "name": "basic-app",
+  "version": "1.0.0",
   "private": true,
+  "author": "Marta Fattori <martafattori@protonmail.ch> (https://github.com/cuttage/)",
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
